Kustomized-GItOps-Manifests/upload-service/base/00-upload-service-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: upload-service
  annotations:
   argocd.argoproj.io/sync-wave: "-1"
