Kustomized-GItOps-Manifests/upload-service/base/03-upload-service.yaml
# Upload Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
  namespace: upload-service
  annotations:
   argocd.argoproj.io/sync-wave: "2"
  labels:
    app: upload-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-service
  template:
    metadata:
      labels:
        app: upload-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - name: upload-service
        image: 547130927936.dkr.ecr.us-east-1.amazonaws.com/prod/upload-service:latest 
        imagePullPolicy: IfNotPresent  # Pull from registry
        ports:
        - containerPort: 8083
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: false 
        volumeMounts:
        - name: uploads-storage
          mountPath: ./uploads
          subPath: uploads
          readOnly: false
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          tcpSocket:
            port: 8083
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8083
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: uploads-storage
        persistentVolumeClaim:
          claimName: uploads-pvc
---
# Upload Service Service
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: upload-service
spec:
  selector:
    app: upload-service
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
  type: ClusterIP
