Kustomized-GItOps-Manifests/upload-service/base/02-upload-service-network-policies.yaml
# Network Policy for Upload Service
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: upload-service-netpol
  namespace: upload-service
  annotations:
   argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app: upload-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api-gateway
    ports:
    - protocol: TCP
      port: 8083
  egress:
  - {} # Allow all egress
